Revision history for Perl extension Text::Format.

0.55 Thu May 31 09:17:32 IDT 2012
    - Fix small spelling error in the POD:
        - closing https://rt.cpan.org/Ticket/Display.html?id=77481
        - Thanks to Salvatore Bonaccorso and the Debian people
        for the report and the patch.
        - ( There were also some duplicate bug report in the rt.cpan.org queue 
        by accident. )

0.54 Fri May 25 02:33:47 IDT 2012
    - Convert t/justify.t and t/format.t to Test::More, "use strict;"
    and "use warnings;" and cleaned them up.
        - fix a warning generated by a call to defined(@array)
            - https://rt.cpan.org/Ticket/Display.html?id=77413
            - thanks to H. Merijn Brand for the report.

0.53 Fri Jan 28 13:02:01 IST 2011
    - Adopted by Shlomi Fish (while disclaiming all rights).
    - Convert the build system to Module-Build, while adding keywords
    and resources.
    - The archive name is now the more standard Text-Format-0.53.tar.gz.
    - Fix some typos in the documentation.

0.52 Sun Mar 29 11:32:50 1998
    - fixed some warnings that appeared when using hanging indents
      (tagged paragraphs).  Also added tha ability to use a list
      as an argument to new() and config() so you can pass a hash ref or
      a list as long as the list length is mod 2 == 0

0.51 Tue Feb 24 13:32:22 1998
    - no real bug fix, just the MANIFEST was wrong, also I got a test
      script for testing the justify feature from the guy who originally
      wrote the code for justify

0.50 Sat Feb 21 10:19:33 1998
    - there were no bugs but I figured that the new feature should
      really have its own release.  I also tried to make the
      justification a little faster, and the extra spaces are now added
      starting on the right side of the text instead of the left
    - fixed up the docs a little as well

0.46 Wed Feb 18 17:19:43 1998
    - fixed bug in justify when there was only one word left for the